// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoaderProgress workspace creation flow snapshot 1`] = `
<div
  className="progress pf-v6-c-wizard"
>
  <nav
    aria-label="Workspace Progress Steps"
    className="pf-v6-c-wizard__nav"
  >
    <ol
      className="pf-v6-c-wizard__nav-list"
      role="list"
    >
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          aria-current="step"
          className="pf-v6-c-wizard__nav-link pf-m-current"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                0
              </span>
              <span
                data-testid="step-name"
              >
                Creating step: Initialize
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          className="pf-v6-c-wizard__nav-link"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Common step: Check running workspaces limit
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          className="pf-v6-c-wizard__nav-link"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Creating step: Create workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
        <ol
          className="pf-v6-c-wizard__nav-list"
          role="list"
        >
          <li
            className="pf-v6-c-wizard__nav-item"
          >
            <span
              className="pf-v6-c-wizard__nav-link pf-m-disabled"
              tabIndex={0}
            >
              <span
                className="pf-v6-c-wizard__nav-link-main"
              >
                <div
                  data-testid="progress-step"
                >
                  <span
                    data-testid="step-distance"
                  >
                    -1
                  </span>
                  <span
                    data-testid="step-name"
                  >
                    Creating step: Fetch devfile
                  </span>
                  <input
                    data-testid="onError"
                    name="onError"
                    onClick={[Function]}
                    type="button"
                    value="onError"
                  />
                  <input
                    data-testid="onWarning"
                    name="onWarning"
                    onClick={[Function]}
                    type="button"
                    value="onWarning"
                  />
                  <input
                    data-testid="onRestart"
                    name="onRestart"
                    onClick={[Function]}
                    type="button"
                    value="onRestart"
                  />
                  <input
                    data-testid="onNextStep"
                    name=" onNextStep"
                    onClick={[Function]}
                    type="button"
                    value="onNextStep"
                  />
                </div>
              </span>
            </span>
          </li>
          <li
            className="pf-v6-c-wizard__nav-item"
          >
            <span
              className="pf-v6-c-wizard__nav-link pf-m-disabled"
              tabIndex={0}
            >
              <span
                className="pf-v6-c-wizard__nav-link-main"
              >
                <div
                  data-testid="progress-step"
                >
                  <span
                    data-testid="step-distance"
                  >
                    -1
                  </span>
                  <span
                    data-testid="step-name"
                  >
                    Creating step: Check existing workspaces
                  </span>
                  <input
                    data-testid="onError"
                    name="onError"
                    onClick={[Function]}
                    type="button"
                    value="onError"
                  />
                  <input
                    data-testid="onWarning"
                    name="onWarning"
                    onClick={[Function]}
                    type="button"
                    value="onWarning"
                  />
                  <input
                    data-testid="onRestart"
                    name="onRestart"
                    onClick={[Function]}
                    type="button"
                    value="onRestart"
                  />
                  <input
                    data-testid="onNextStep"
                    name=" onNextStep"
                    onClick={[Function]}
                    type="button"
                    value="onNextStep"
                  />
                </div>
              </span>
            </span>
          </li>
          <li
            className="pf-v6-c-wizard__nav-item"
          >
            <span
              className="pf-v6-c-wizard__nav-link pf-m-disabled"
              tabIndex={0}
            >
              <span
                className="pf-v6-c-wizard__nav-link-main"
              >
                <div
                  data-testid="progress-step"
                >
                  <span
                    data-testid="step-distance"
                  >
                    -1
                  </span>
                  <span
                    data-testid="step-name"
                  >
                    Creating step: Check SCC permission
                  </span>
                  <input
                    data-testid="onError"
                    name="onError"
                    onClick={[Function]}
                    type="button"
                    value="onError"
                  />
                  <input
                    data-testid="onWarning"
                    name="onWarning"
                    onClick={[Function]}
                    type="button"
                    value="onWarning"
                  />
                  <input
                    data-testid="onRestart"
                    name="onRestart"
                    onClick={[Function]}
                    type="button"
                    value="onRestart"
                  />
                  <input
                    data-testid="onNextStep"
                    name=" onNextStep"
                    onClick={[Function]}
                    type="button"
                    value="onNextStep"
                  />
                </div>
              </span>
            </span>
          </li>
          <li
            className="pf-v6-c-wizard__nav-item"
          >
            <span
              className="pf-v6-c-wizard__nav-link pf-m-disabled"
              tabIndex={0}
            >
              <span
                className="pf-v6-c-wizard__nav-link-main"
              >
                <div
                  data-testid="progress-step"
                >
                  <span
                    data-testid="step-distance"
                  >
                    -1
                  </span>
                  <span
                    data-testid="step-name"
                  >
                    Creating step: Apply devfile
                  </span>
                  <input
                    data-testid="onError"
                    name="onError"
                    onClick={[Function]}
                    type="button"
                    value="onError"
                  />
                  <input
                    data-testid="onWarning"
                    name="onWarning"
                    onClick={[Function]}
                    type="button"
                    value="onWarning"
                  />
                  <input
                    data-testid="onRestart"
                    name="onRestart"
                    onClick={[Function]}
                    type="button"
                    value="onRestart"
                  />
                  <input
                    data-testid="onNextStep"
                    name=" onNextStep"
                    onClick={[Function]}
                    type="button"
                    value="onNextStep"
                  />
                </div>
              </span>
            </span>
          </li>
        </ol>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          className="pf-v6-c-wizard__nav-link"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Start workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          className="pf-v6-c-wizard__nav-link"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Open workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`LoaderProgress workspace starting flow snapshot 1`] = `
<div
  className="progress pf-v6-c-wizard"
>
  <nav
    aria-label="Workspace Progress Steps"
    className="pf-v6-c-wizard__nav"
  >
    <ol
      className="pf-v6-c-wizard__nav-list"
      role="list"
    >
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          aria-current="step"
          className="pf-v6-c-wizard__nav-link pf-m-current"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                0
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Initialize
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          className="pf-v6-c-wizard__nav-link"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Common step: Check running workspaces limit
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          className="pf-v6-c-wizard__nav-link"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Start workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
      </li>
      <li
        className="pf-v6-c-wizard__nav-item"
      >
        <span
          className="pf-v6-c-wizard__nav-link"
          tabIndex={0}
        >
          <span
            className="pf-v6-c-wizard__nav-link-main"
          >
            <div
              data-testid="progress-step"
            >
              <span
                data-testid="step-distance"
              >
                -1
              </span>
              <span
                data-testid="step-name"
              >
                Starting step: Open workspace
              </span>
              <input
                data-testid="onError"
                name="onError"
                onClick={[Function]}
                type="button"
                value="onError"
              />
              <input
                data-testid="onWarning"
                name="onWarning"
                onClick={[Function]}
                type="button"
                value="onWarning"
              />
              <input
                data-testid="onRestart"
                name="onRestart"
                onClick={[Function]}
                type="button"
                value="onRestart"
              />
              <input
                data-testid="onNextStep"
                name=" onNextStep"
                onClick={[Function]}
                type="button"
                value="onNextStep"
              />
            </div>
          </span>
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
